<resources>
    <string name="app_name">RTCSample</string>

    <string name="alirtc_title">AliRTCSample</string>
    <string name="alirtc_join_channel">开始</string>
    <string name="alirtc_attention">频道ID不能为空！</string>
    <string name="alirtc_out">退出</string>
    <string name="alirtc_mode">1v1视频演示</string>
    <string name="alirtc_permission">请先给予权限</string>
    <string name="alirtc_enter">确定</string>
    <string name="alirtc_channel_hint">请输入频道号（3-12位数字）</string>
    <string name="alirtc_channel_error">频道号长度不能小于3位或大于12位</string>

</resources>
