<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/holo_light_gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/title_size"
            android:text="@string/alirtc_title"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/et_channel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/dimen_50"
        android:layout_marginEnd="@dimen/dimen_50"
        android:padding="@dimen/dimen_3"
        android:inputType="number"
        android:textSize="@dimen/labels_text_size"
        android:background="@drawable/alirtc_bg_enter_shape"
        android:hint="@string/alirtc_channel_hint"
        />

    <Button
        android:id="@+id/bt_AuthInfo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_44"
        android:layout_below="@+id/et_channel"
        android:layout_marginTop="@dimen/dimen_15"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/labels_text_size"
        android:text="@string/alirtc_enter"
        android:background="@drawable/alirtc_bg_enter_shape"
        />

    <TextView
        android:id="@+id/tv_sdk_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/labels_text_size"/>

</RelativeLayout>