<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/black_alpha_5">

        <TextView
            android:id="@+id/tv_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:padding="@dimen/dimen_3"
            android:layout_centerVertical="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/title_size"
            android:text="@string/alirtc_out"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/title_size"
            android:text="@string/alirtc_mode"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/rl_title">

        <org.webrtc.sdk.SophonSurfaceView
            android:id="@+id/sf_local_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"/>

        <org.webrtc.sdk.SophonSurfaceView
            android:id="@+id/sf_remote_view"
            android:layout_width="match_parent"
            android:visibility="invisible"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="2dp"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/tv_join_channel"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/labels_text_size"
            android:text="@string/alirtc_join_channel"
            android:background="@drawable/alirtc_video_call_handsfree_shape"
            />

    </FrameLayout>

</RelativeLayout>